[gd_scene load_steps=14 format=2]

[ext_resource path="res://UI/NPR_1.png" type="Texture" id=1]
[ext_resource path="res://UI/NPR_2.png" type="Texture" id=2]
[ext_resource path="res://UI/Default_Theme.tres" type="Theme" id=3]
[ext_resource path="res://UI/Font_Large.tres" type="DynamicFont" id=4]
[ext_resource path="res://Menu/Settings/Setting.gd" type="Script" id=5]
[ext_resource path="res://UI/X.png" type="Texture" id=6]
[ext_resource path="res://UI/YesPanel.tres" type="StyleBox" id=7]
[ext_resource path="res://UI/NoPanel.tres" type="StyleBox" id=9]

[sub_resource type="StreamTexture" id=5]

[sub_resource type="StreamTexture" id=4]

[sub_resource type="StreamTexture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=2]
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Setting" type="CanvasLayer"]
pause_mode = 2
layer = 3
script = ExtResource( 5 )

[node name="M1" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="NinePatchRect" parent="M1"]
margin_left = 100.0
margin_top = 100.0
margin_right = 1180.0
margin_bottom = 620.0
texture = ExtResource( 1 )
patch_margin_left = 16
patch_margin_top = 20
patch_margin_right = 16
patch_margin_bottom = 60

[node name="M2" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="NinePatchRect" parent="M2"]
margin_left = 100.0
margin_top = 100.0
margin_right = 1180.0
margin_bottom = 620.0
texture = ExtResource( 2 )
patch_margin_left = 16
patch_margin_top = 32
patch_margin_right = 16
patch_margin_bottom = 16

[node name="M" type="MarginContainer" parent="M2/BG"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB" type="VBoxContainer" parent="M2/BG/M"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1030.0
margin_bottom = 470.0
custom_constants/separation = 20

[node name="Title" type="HBoxContainer" parent="M2/BG/M/VB"]
margin_right = 197.0
margin_bottom = 48.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 20

[node name="CloseButton" type="Button" parent="M2/BG/M/VB/Title"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
icon = ExtResource( 6 )
expand_icon = true

[node name="SettingLabel" type="Label" parent="M2/BG/M/VB/Title"]
margin_left = 68.0
margin_top = 4.0
margin_right = 197.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 4 )
text = "SETTING"
align = 1
valign = 1

[node name="TabSplit" type="HBoxContainer" parent="M2/BG/M/VB"]
margin_top = 68.0
margin_right = 980.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50

[node name="Right" type="VBoxContainer" parent="M2/BG/M/VB/TabSplit"]
margin_top = 74.0
margin_right = 465.0
margin_bottom = 278.0
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="VSync" type="Label" parent="M2/BG/M/VB/TabSplit/Right"]
margin_right = 465.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
text = "VSync"
align = 1
valign = 1
clip_text = true

[node name="VSyncButton" type="Button" parent="M2/BG/M/VB/TabSplit/Right"]
margin_top = 52.0
margin_right = 465.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 48 )
focus_mode = 0
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 9 )
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 0

[node name="Fullscreen" type="Label" parent="M2/BG/M/VB/TabSplit/Right"]
margin_top = 104.0
margin_right = 465.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 48 )
text = "Full Screen"
align = 1
valign = 1
clip_text = true

[node name="FullscreenButton" type="Button" parent="M2/BG/M/VB/TabSplit/Right"]
margin_top = 156.0
margin_right = 465.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 48 )
focus_mode = 0
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 9 )
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 0

[node name="Left" type="VBoxContainer" parent="M2/BG/M/VB/TabSplit"]
margin_left = 515.0
margin_top = 22.0
margin_right = 980.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="Master" type="Label" parent="M2/BG/M/VB/TabSplit/Left"]
margin_right = 465.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
text = "Master"

[node name="MasterSlider" type="HSlider" parent="M2/BG/M/VB/TabSplit/Left"]
margin_top = 52.0
margin_right = 465.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 48 )
custom_icons/grabber_disabled = SubResource( 5 )
custom_icons/grabber_highlight = SubResource( 4 )
custom_icons/grabber = SubResource( 3 )
custom_styles/grabber_area_highlight = SubResource( 1 )
custom_styles/grabber_area = SubResource( 2 )
step = 5.0

[node name="Music" type="Label" parent="M2/BG/M/VB/TabSplit/Left"]
margin_top = 104.0
margin_right = 465.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 48 )
text = "Music"

[node name="MusicSlider" type="HSlider" parent="M2/BG/M/VB/TabSplit/Left"]
margin_top = 156.0
margin_right = 465.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 48 )
custom_icons/grabber_disabled = SubResource( 5 )
custom_icons/grabber_highlight = SubResource( 4 )
custom_icons/grabber = SubResource( 3 )
custom_styles/grabber_area_highlight = SubResource( 1 )
custom_styles/grabber_area = SubResource( 2 )
step = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX" type="Label" parent="M2/BG/M/VB/TabSplit/Left"]
margin_top = 208.0
margin_right = 465.0
margin_bottom = 256.0
rect_min_size = Vector2( 0, 48 )
text = "Sound Effect"

[node name="SFXSlider" type="HSlider" parent="M2/BG/M/VB/TabSplit/Left"]
margin_top = 260.0
margin_right = 465.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 48 )
custom_icons/grabber_disabled = SubResource( 5 )
custom_icons/grabber_highlight = SubResource( 4 )
custom_icons/grabber = SubResource( 3 )
custom_styles/grabber_area_highlight = SubResource( 1 )
custom_styles/grabber_area = SubResource( 2 )
step = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="M2/BG/M/VB/Title/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="value_changed" from="M2/BG/M/VB/TabSplit/Left/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="M2/BG/M/VB/TabSplit/Left/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="M2/BG/M/VB/TabSplit/Left/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
